# lab3.2_sorting_algorithms

./: CMakeLists.txt  README.md  main.cpp
containers/: ArraySequence.hpp  DynamicArray.hpp  LinkedList.hpp  ListSequence.hpp  Sequence.h  SmartArray.h
data/: DataGenerator.cpp  DataGenerator.h  Student.h
pointers/: UniquePtr.h
sorting/: BubbleSorter.h  ISorter.h  InsertionSorter.h  QuickSorter.h  ShellSorter.h
tests/: TestSorts.cpp  TestSorts.h
utility/: Console.cpp  Console.h  GUI.h  SortUtils.h
